# A3OldWorld---Server

./: .gitignore  Astonia.cbp  Astonia.layout  CMakeLists.txt  area.c  bank.c  chat.c  chatserver  clan.c  clan.h  clanmaster.c  command.c  create.c  create_account  create_armor  create_character  create_weapons  database.c  database.h  death.c  io.c  military.c  missions.c  motd.txt  pents.c  player.c  player_driver.c  questlog.c  random.c  server  server.c  server.h  start  tool.c  tool.h  transport.c  tunnel.c  update_server
zones/1/: above1.map  above1_guild.itm  above1_mad.itm  above1_robber.itm  above1_skeleton_maze.itm  above1_wood.chr
zones/2/: below2.chr
zones/21/: ice_pents.chr
zones/25/: hell.chr
zones/4/: pents.chr
zones/50/: mymap.map
zones/7/: fire_pents.chr
zones/9/: ice_pents.chr
zones/Copy of 3/: above3_generic.chr
zones/generic/: bonus_items.itm  clan.itm  orb.itm  transport.itm  weapons.itm
