cmake_minimum_required(VERSION 3.8)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        obj/Release/act.o
        obj/Release/alchemy.o
        obj/Release/area.o
        obj/Release/area2.o
        obj/Release/area3.o
        obj/Release/arena.o
        obj/Release/arkhata.o
        obj/Release/badip.o
        obj/Release/bank.o
        obj/Release/base.o
        obj/Release/bones.o
        obj/Release/book.o
        obj/Release/btrace.o
        obj/Release/caligar.o
        obj/Release/chat.o
        obj/Release/chatserver.o
        obj/Release/clan.o
        obj/Release/clanlog.o
        obj/Release/clanmaster.o
        obj/Release/club.o
        obj/Release/clubmaster.o
        obj/Release/command.o
        obj/Release/consistency.o
        obj/Release/container.o
        obj/Release/create.o
        obj/Release/create_account.o
        obj/Release/create_armor.o
        obj/Release/create_character.o
        obj/Release/create_weapons.o
        obj/Release/database.o
        obj/Release/date.o
        obj/Release/death.o
        obj/Release/depot.o
        obj/Release/do.o
        obj/Release/drdata.o
        obj/Release/drvlib.o
        obj/Release/dungeon.o
        obj/Release/dungeon_tab.o
        obj/Release/edemon.o
        obj/Release/effect.o
        obj/Release/error.o
        obj/Release/expire.o
        obj/Release/fdemon.o
        obj/Release/forest.o
        obj/Release/gatekeeper.o
        obj/Release/gwendylon.o
        obj/Release/ice.o
        runtime/1/gwendylon.dll
        runtime/1/shrike.dll
        runtime/10/ice.dll
        runtime/11/palace.dll
        runtime/13/dungeon.dll
        runtime/14/random.dll
        runtime/15/swamp.dll
        runtime/16/forest.dll
        runtime/17/two.dll
        runtime/18/bones.dll
        runtime/19/nomad.dll
        runtime/19/saltmine.dll
        runtime/2/area2.dll
        runtime/20/lq.dll
        runtime/22/lab1.dll
        runtime/22/lab2.dll
        runtime/22/lab3.dll
        runtime/22/lab4.dll
        runtime/22/lab5.dll
        runtime/23/strategy.dll
        runtime/24/strategy.dll
        runtime/25/warped.dll
        runtime/26/staffer.dll
        runtime/28/staffer3.dll
        runtime/29/military.dll
        runtime/29/staffer2.dll
        runtime/3/area3.dll
        runtime/3/arena.dll
        runtime/3/gatekeeper.dll
        runtime/3/military.dll
        runtime/31/warrmines.dll
        runtime/32/missions.dll
        runtime/33/tunnel.dll
        runtime/34/teufel.dll
        runtime/35/lq.dll
        runtime/36/caligar.dll
        runtime/37/arkhata.dll
        runtime/5/sewers.dll
        runtime/6/edemon.dll
        runtime/8/fdemon.dll
        runtime/generic/alchemy.dll
        runtime/generic/bank.dll
        runtime/generic/base.dll
        runtime/generic/book.dll
        runtime/generic/clanmaster.dll
        runtime/generic/clubmaster.dll
        runtime/generic/lostcon.dll
        runtime/generic/merchant.dll
        runtime/generic/mine.dll
        runtime/generic/pents.dll
        runtime/generic/professor.dll
        runtime/generic/sidestory.dll
        runtime/generic/simple_baddy.dll
        runtime/generic/transport.dll
        zones/1/above1.map
        zones/1/above1_city.chr
        zones/1/above1_city.itm
        zones/1/above1_exp2_dungeon.chr
        zones/1/above1_exp_dungron.chr
        zones/1/above1_guild.chr
        zones/1/above1_guild.itm
        zones/1/above1_knight_castle.chr
        zones/1/above1_knight_castle.itm
        zones/1/above1_mad.chr
        zones/1/above1_mad.itm
        zones/1/above1_mage_castle.chr
        zones/1/above1_mage_castle.itm
        zones/1/above1_robber.chr
        zones/1/above1_robber.itm
        zones/1/above1_skeleton_maze.chr
        zones/1/above1_skeleton_maze.itm
        zones/1/above1_village.chr
        zones/1/above1_village.itm
        zones/1/above1_warlock.chr
        zones/1/above1_warlock.itm
        zones/1/above1_wood.chr
        zones/1/above1_wood.itm
        zones/1/shrike.chr
        zones/1/shrike.itm
        zones/1/sign.itm
        zones/1/swamp.pre
        zones/10/ice.chr
        zones/10/ice.itm
        zones/10/ice.map
        zones/11/ice.pre
        zones/11/palace.chr
        zones/11/palace.itm
        zones/11/palace.map
        zones/12/mine.chr
        zones/12/mine.itm
        zones/12/mines.map
        zones/12/mines.pre
        zones/13/dungeon.chr
        zones/13/dungeon.itm
        zones/13/dungeon.map
        zones/14/dungeon.pre
        zones/14/random.chr
        zones/14/random.itm
        zones/14/random.map
        zones/15/swamp.chr
        zones/15/swamp.itm
        zones/15/swamp.map
        zones/15/swamp.pre
        zones/16/forest.chr
        zones/16/forest.itm
        zones/16/forest.map
        zones/16/swamp.pre
        zones/17/grave.pre
        zones/17/two.chr
        zones/17/two.itm
        zones/17/two.map
        zones/17/two.pre
        zones/18/bones.chr
        zones/18/bones.itm
        zones/18/bones.map
        zones/18/bones.pre
        zones/19/mines.pre
        zones/19/nomad.chr
        zones/19/nomad.itm
        zones/19/nomad.map
        zones/19/saltmine.chr
        zones/19/saltmine.itm
        zones/2/below2.chr
        zones/2/below2.map
        zones/2/below2_generic.itm
        zones/2/grave.pre
        zones/20/lq.chr
        zones/20/lq.itm
        zones/20/lq.map
        zones/20/merchant.chr
        zones/20/mines.pre
        zones/21/fire_pents.chr
        zones/21/fire_pents.itm
        zones/21/ice_pents.chr
        zones/21/ice_pents.itm
        zones/21/pent.itm
        zones/21/pents.chr
        zones/21/system.map
        zones/22/lab1.chr
        zones/22/lab1.itm
        zones/22/lab1.map
        zones/22/lab2.chr
        zones/22/lab2.itm
        zones/22/lab3.chr
        zones/22/lab3.itm
        zones/22/lab4.chr
        zones/22/lab4.itm
        zones/22/lab5.chr
        zones/22/lab5.itm
        zones/23/strategy.chr
        zones/23/strategy.itm
        zones/23/strategy.map
        zones/24/strategy.chr
        zones/24/strategy.itm
        zones/24/strategy.map
        zones/25/hell.chr
        zones/25/hell_boss.chr
        zones/25/hell_pent.itm
        zones/25/teleport.itm
        zones/25/warped.chr
        zones/25/warped.itm
        zones/25/warped.map
        zones/25/warped.pre
        zones/26/dragon.map
        zones/26/dragon_door.itm
        zones/26/dragon_of_death.chr
        zones/26/dragon_sign_1.itm
        zones/26/dungeon.chr
        zones/26/dungeon.itm
        zones/26/light_teleport.itm
        zones/26/spiketrap.itm
        zones/26/vault.chr
        zones/26/vault.itm
        zones/27/log0.txt
        zones/27/log1.txt
        zones/28/gold_units.itm
        zones/28/uw_potion.itm
        zones/28/WS_Forest_Bears.chr
        zones/28/WS_Forest_Bears.itm
        zones/28/WS_Forest_Pier_LakeBeast_Items.itm
        zones/28/WS_Forest_Pier_LakeBeasts.chr
        zones/28/WS_Forest_Pier_Teleports.itm
        zones/28/WS_Quest_Chars.chr
        zones/28/WS_Robbers.chr
        zones/28/WS_Robbers.map
        zones/28/WS_Robbers_Chests.itm
        zones/28/WS_Robbers_Doors.itm
        zones/28/WS_Robbers_Doors_Quest.itm
        zones/28/WS_Robbers_Quest.chr
        zones/28/WS_Robbers_Storeroom.itm
        zones/28/WS_Robbers_Teleporters.itm
        zones/29/bran.itm
        zones/29/chests.itm
        zones/29/gold_units.itm
        zones/29/military.chr
        zones/29/minewall.itm
        zones/29/moveblock.itm
        zones/29/spade.itm
        zones/29/teleports.itm
        zones/29/warr_keys.itm
        zones/29/wrarenapents.itm
        zones/29/wrforesttown.chr
        zones/29/wrforesttown.itm
        zones/29/wrforesttown.map
        zones/29/wrforesttowndrinks.itm
        zones/29/wrforesttowngrolms.chr
        zones/29/wrforesttownmages.chr
        zones/29/wrforesttownquestchar.chr
        zones/29/wrtower.chr
        zones/29/wrtower.itm
        zones/29/wrtowerfriendly.chr
        zones/3/above3.map
        zones/3/above3_generic.chr
        zones/3/above3_generic.itm
        zones/3/arena.pre
        zones/3/mines.pre
        zones/30/wr_spawner.itm
        zones/30/wr_spawner.map
        zones/31/chests.itm
        zones/31/dwarves.chr
        zones/31/gold_units.itm
        zones/31/mines.chr
        zones/31/mines.itm
        zones/31/mines.map
        zones/31/mines.pre
        zones/31/mineshop.chr
        zones/31/minewall.chr
        zones/31/minewall.itm
        zones/31/minezombie.chr
        zones/31/minezombie.itm
        zones/31/shopkeepers.chr
        zones/31/spells.itm
        zones/32/chests.itm
        zones/32/dungeon_doors.itm
        zones/32/mission.chr
        zones/32/mission.itm
        zones/32/monsters.itm
        zones/32/newdungeon.map
        zones/33/tunnel.chr
        zones/33/tunnel.itm
        zones/33/tunnel.map
        zones/33/tunnel.pre
        zones/34/hell.chr
        zones/34/hell_boss.chr
        zones/34/hell_pent.itm
        zones/34/teleport.itm
        zones/34/teufel.chr
        zones/34/teufel.itm
        zones/34/teufel.map
        zones/35/lq.chr
        zones/35/lq.itm
        zones/35/lq.map
        zones/35/lq_door.itm
        zones/35/lq_light.itm
        zones/36/arkhata_dict.itm
        zones/36/caligar.map
        zones/36/Caligar.pre
        zones/36/Caligar_Amazon_Den.chr
        zones/36/Caligar_Amazon_Den.itm
        zones/36/Caligar_City.chr
        zones/36/Caligar_City.itm
        zones/36/Caligar_Dungeon.chr
        zones/36/Caligar_Dungeon.itm
        zones/36/Caligar_Guards.chr
        zones/36/Caligar_Items.itm
        zones/36/Caligar_Palace.chr
        zones/36/Caligar_Palace.itm
        zones/36/Caligar_PalaceL2.itm
        zones/36/Caligar_PalaceL3.itm
        zones/36/Caligar_Quest.chr
        zones/36/Caligar_stuff.itm
        zones/36/Caligar_Training.chr
        zones/36/Caligar_Training.itm
        zones/36/Caligar_UPass.chr
        zones/36/Caligar_UPass.itm
        zones/36/Caligar_Vendors.chr
        zones/36/Caligar_Weapons.itm
        zones/37/arkhata.map
        zones/37/Bandit_Keys_doors.itm
        zones/37/Bandits.chr
        zones/37/Big_room_keys_doors.itm
        zones/37/Big_Room_Quest.chr
        zones/37/Blue_harp.chr
        zones/37/Bookeater_teleporters.itm
        zones/37/Bookeater_wrong_teles.itm
        zones/37/Bridge_Guards.chr
        zones/37/Campers.chr
        zones/37/City_Traders_Banker.chr
        zones/37/extra_spell.itm
        zones/37/Fighting_School.chr
        zones/37/firesmoke.itm
        zones/37/Forest.chr
        zones/37/Forest2.chr
        zones/37/Fortress_crappy_teles.itm
        zones/37/Fortress_Enemies_and_Guard.chr
        zones/37/Fortress_Keys_doors.itm
        zones/37/Fortress_quest_right_teles.itm
        zones/37/Golem_area_doors_keys.itm
        zones/37/Golem_gang.chr
        zones/37/Holes_ladders.itm
        zones/37/Ice_area_teles.itm
        zones/37/Ice_skull_light.itm
        zones/37/Item.itm
        zones/37/Knoger_keys_doors.itm
        zones/37/Knoger_ladders.itm
        zones/37/Knogers_Creeper.chr
        zones/37/Mine_Quest.chr
        zones/37/Monk_Key_Parts.itm
        zones/37/Monks_Library.chr
        zones/37/Pot_Maker.chr
        zones/37/secretary.chr
        zones/37/Seeker_items.itm
        zones/37/Seekers.chr
        zones/37/test_chest.itm
        zones/37/Vamp_keys.itm
        zones/37/Vamp_Skele_Zombie.chr
        zones/37/Zombie_Pool.itm
        zones/4/lab1.map
        zones/4/pent.itm
        zones/4/pent_boss.chr
        zones/4/pents.chr
        zones/4/teleport.itm
        zones/5/sewers.chr
        zones/5/sewers.itm
        zones/5/sewers.map
        zones/50/mymap.map
        zones/6/earth.itm
        zones/6/earth.map
        zones/6/edemon.chr
        zones/6/final_doors.itm
        zones/7/fire_pent_boss.chr
        zones/7/fire_pents.chr
        zones/7/fire_pents.itm
        zones/7/fire_pents.map
        zones/7/strong.chr
        zones/8/fdemon.itm
        zones/8/final_lava.pre
        zones/8/fire.chr
        zones/8/fire.map
        zones/9/ice_pent_boss.chr
        zones/9/ice_pents.chr
        zones/9/ice_pents.itm
        zones/9/ice_pents.map
        zones/9/lr-iceland.pre
        zones/generic/adornments.itm
        zones/generic/alchemy.itm
        zones/generic/armor.itm
        zones/generic/bonus_items.itm
        zones/generic/caligar.itm
        zones/generic/city.pre
        zones/generic/clan.itm
        zones/generic/cloth.itm
        zones/generic/culture.itm
        zones/generic/depot.itm
        zones/generic/explore.itm
        zones/generic/final_culture.pre
        zones/generic/final_walls.pre
        zones/generic/grave.itm
        zones/generic/ice.pre
        zones/generic/ice_palace_key.itm
        zones/generic/lab.itm
        zones/generic/macro.chr
        zones/generic/metal.itm
        zones/generic/mission_bonus.itm
        zones/generic/moonies.itm
        zones/generic/mr_chairs.itm
        zones/generic/mr_chestbox.itm
        zones/generic/mr_doors.itm
        zones/generic/mr_lights.itm
        zones/generic/orb.itm
        zones/generic/pent.pre
        zones/generic/player.chr
        zones/generic/potions.itm
        zones/generic/randchest.itm
        zones/generic/recall.itm
        zones/generic/ring.itm
        zones/generic/runes.itm
        zones/generic/scroll.itm
        zones/generic/sewer.pre
        zones/generic/sidestory.chr
        zones/generic/sidestory.itm
        zones/generic/southern.pre
        zones/generic/spells.itm
        zones/generic/stack.itm
        zones/generic/sun_amulet.itm
        zones/generic/swamp.itm
        zones/generic/test.chr
        zones/generic/teufelheim.itm
        zones/generic/tmp.itm
        zones/generic/torch.itm
        zones/generic/transport.itm
        zones/generic/warr_keys.itm
        zones/generic/weapons.itm
        zones/presets/dungeon.pre
        zones/presets/grave.pre
        zones/presets/moonies.pre
        zones/presets/swamp.pre
        17_10_30.elog
        17_10_30.ilog
        17_10_30.log
        17_10_31.elog
        17_10_31.ilog
        17_10_31.log
        17_11_01.elog
        17_11_01.ilog
        17_11_01.log
        17_11_06.elog
        17_11_06.ilog
        17_11_06.log
        17_11_07.elog
        17_11_07.ilog
        17_11_07.log
        17_11_08.elog
        17_11_08.ilog
        17_11_08.log
        17_11_09.elog
        17_11_09.ilog
        17_11_09.log
        17_11_10.elog
        17_11_10.ilog
        17_11_10.log
        act.c
        act.h
        alchemy.c
        area.c
        area.h
        area1.h
        area2.c
        area3.c
        area3.h
        arena.c
        arkhata.c
        arkhata.h
        Astonia.cbp
        Astonia.layout
        badip.c
        badip.h
        balance.h
        bank.c
        bank.h
        base.c
        bones.c
        book.c
        book.h
        btrace.c
        btrace.h
        caligar.c
        chat.c
        chat.h
        chatserver
        chatserver.c
        clan.c
        clan.h
        clanlog.c
        clanlog.h
        clanmaster.c
        client.h
        club.c
        club.h
        clubmaster.c
        command.c
        command.h
        consistency.c
        consistency.h
        container.c
        container.h
        create.c
        create.h
        create_account
        create_account.c
        create_armor
        create_armor.c
        create_character
        create_character.c
        create_tables.sql
        create_weapons
        create_weapons.c
        database.c
        database.h
        date.c
        date.h
        death.c
        death.h
        depot.c
        depot.h
        direction.h
        do.c
        do.h
        drdata.c
        drdata.h
        drvlib.c
        drvlib.h
        dungeon.c
        dungeon_tab.c
        edemon.c
        effect.c
        effect.h
        error.c
        error.h
        expire.c
        expire.h
        fdemon.c
        fight.h
        fk.txt
        flower_ppd.h
        forest.c
        gatekeeper.c
        gwendylon.c
        ice.c
        ice_shared.c
        ignore.c
        ignore.h
        io.c
        io.h
        item_id.h
        lab.c
        lab.h
        lab1.c
        lab2.c
        lab3.c
        lab4.c
        lab5.c
        libload.c
        libload.h
        light.c
        light.h
        log.c
        log.h
        lookup.c
        lookup.h
        looping
        los.c
        los.h
        lostcon.c
        lostcon.h
        lq.c
        mail.c
        mail.h
        Makefile
        map.c
        map.h
        mem.c
        mem.h
        merc.sql
        merchant.c
        military.c
        military.h
        mine.c
        misc_ppd.h
        mission_ppd.h
        missions.c
        motd.c
        motd.h
        motd.txt
        my
        nomad.c
        nomad_ppd.h
        notify.c
        notify.h
        palace.c
        path.c
        path.h
        pents.c
        player.c
        player.h
        player_driver.c
        player_driver.h
        poison.c
        poison.h
        prof.c
        prof.h
        professor.c
        punish.c
        punish.h
        quest_exp.h
        questlog.c
        questlog.h
        random.c
        rdtsc.S
        README.md
        respawn.c
        respawn.h
        saltmine.c
        sector.c
        sector.h
        see.c
        see.h
        server
        server.c
        server.h
        sewers.c
        shrike.c
        shrine.h
        sidestory.c
        simple_baddy.c
        skill.c
        skill.h
        sleep.c
        sleep.h
        spell.h
        staffer.c
        staffer2.c
        staffer3.c
        staffer_ppd.h
        start
        statistics.c
        statistics.h
        storage.sql
        store.c
        store.h
        strategy.c
        swamp.c
        swear.c
        swear.h
        talk.c
        talk.h
        task.c
        task.h
        tell.c
        tell.h
        teufel.c
        teufel_pk.c
        teufel_pk.h
        timer.c
        timer.h
        todo.txt
        tool.c
        tool.h
        transport.c
        transport.h
        tunnel.c
        two.c
        two_ppd.h
        update_server
        update_server.c
        warped.c
        warrmines.c)

add_executable(untitled ${SOURCE_FILES})